//
// Created by UshioHayase on 2026-03-14.
//

#pragma once

namespace ushionn
{
namespace accelarator
{
class DeviceContext
{
  private:
};
} // namespace accelarator
} // namespace ushionn
