//
// Created by UshioHayase on 2026-03-14.
//

#pragma once
#include "operation.h"

#include "core/tensor.h"

namespace ushionn
{
namespace function
{

class Matmul : Operation
{
  public:
    Matmul() = delete;
    ~Matmul() = delete;

    static Tensor forward(const Tensor& a, const Tensor& b);
    static void forward(Tensor& result, const Tensor& a, const Tensor& b);
    static std::vector<uint64_t> calculate_matmul_size(
        const std::vector<uint64_t>& a, const std::vector<uint64_t>& b);
};

inline Tensor matmul(const Tensor& a, const Tensor& b)
{
    return Matmul::forward(a, b);
}
} // namespace function
} // namespace ushionn