//
// Created by UshioHayase on 2026-03-14.
//

#pragma once
#include <string>
#include <vector>

namespace ushionn
{
namespace layer
{
class GraphTopologicalSort
{
    static std::vector<std::string> sort();
};
} // namespace layer
} // namespace ushionn
