classDiagram
    class DType {
        <<enumeration>>
        FP4
        FP8_e5m2
        FP8_e4m3
        BF16
        FP16
        FP32
        FP64
    }
    class DeviceType {
        <<enumeration>>
        NONE
        HOST
        DEVICE
    }
    class Device {
        +type_ DeviceType
        +index_ int
    }
    namespace Memory {
        class Storage {
            +void* ptr
        }
        class IAllocator {
            +allocate(uint64_t size) void**
            +deallocate(void* ptr) void*
        }
        class CPUAllocator {
            +allocate(uint64_t size) void*
            +deallocate(void* ptr) void
        }
        class CUDAAllocator {
            +allocate(uint64_t size) void *
            +deallocate(void* ptr) void*
        }
        class AllocatorAdapter {
            +allocate(uint64_t size) void*
            +deallocate() void
            -IAllocator* allocator_
        }
        class MemoryPool {
            -Allocator alloc_;
        }
    }
    namespace core {
        class Storage {
            -unique_ptr~Storage~ data_
            -BaseAllocator~T~ allocator_
            -uint64_t total_bytes
        }

        class Tensor {
            +Tensor()
            +Tensor~T~(const vector~uint64_t~ & shape, const T* ptr, Device location)
            +Tensor(vector~uint64_t~ shape, DType type, Device location)
            +Tensor(shared_ptr~TensorImpl~)
            +Tensor(const Tensor& origin, vector~uint64_t~ shape, vector~uint64_t~ strides, uint64_t offset, DType type)
            +transpose(uint64_t dim1, uint64_t dim2) Tensor
            +permute(const vector~uint64_t~ & order) Tensor
            +view(const vector~uint64_t~ & shape) Tensor
            +reshape(const vector~uint64_t~ & shape) Tensor
            +clone() Tensor
            +contiguous() const
            +to(Device location) Tensor
            +to(DType type) Tensor
            +cpu() Tensor
            +cuda() Tensor
            +operator+=(const Tensor& other) Tensor&
            +operator*=(const float scalar) Tensor&
            +shape() const vector~uint64_t~
            +strides() const vector~uint64_t~
            +dim() uint64_t
            +numel() uint64_t
            +dtype() DType
            +device() Device
            +is_contiguous() bool
            +get_elem_size() uint64_t
            +data() void*
            +data_ptr~T~() T*
            -clone_cpu() Tensor
            -clone_gpu() Tensor
            -unique_ptr~TensorImpl~ impl_
        }
        class TensorImpl {
            +TensorImpl(vector~uint64_t~ shape, DType type, Device location)
            +TensorImpl(shared_ptr~StorageImpl~ storage, vector~uint64_t~ shape, vector~uint64_t~ strides, uint64_t offset, DType type)
            +shape() const vector~uint64_t~ &
            +strides() const vector~uint64_t~ &
            +dim() uint64_t
            +numel() uint64_t
            +storage_offset() uint64_t
            +dtype() DType
            +device() Device
            +get_elem_size() uint64_t
            +is_contiguous() bool
            +data() void*
            +data_ptr~T~() T*
            +storage() shared_ptr~Storage~
            +calculate_default_strides() vector~uint64_t~$
            -shape_ vector~uint64_t~
            -strides_ vector~uint64_t~
            -uint64_t total_elements_
            -uint64_t storage_offset_
            -DType type_
            -shared_ptr~Storage~ storage_
        }
    }
    namespace Operation {
    %% 개별 Operator 내부에서 커널 호출
        class Add {
            +forward(const Tensor& a, const Tensor& b) Tensor$
        }
        class Matmul {
            +forward(const Tensor& a, const Tensor& b) Tensor$
            +calculate_matmul_size(const vector~uint64_t~ & a, const vector~uint64_t~& b) vector~uint64_t~$
        }
        class ElememtwiseMul {
            +forward(const Tensor& a, const Tensor& b) Tensor$
        }
        class ReLU {
            +forward(const Tensor& a) Tensor$
        }
        class Softmax {
            +forward(const Tensor& a, int dim) Tensor$
        }
    }
    namespace Layer {
        class ILayer {
            <<interface>>
            +forward(const Tensor& t) Tensor*
            +to(const Device& device) void*
            +load_weights(const unordered_map<std:: string, Tensor>& state_dict) void*
            +name() const string*
        }
        class Conv1D {
            +forward(const Tensor& t) Tensor
            +to(const Device& device) void
            +load_weights(const unordered_map<std:: string, Tensor>& state_dict) void
            +name() string
            -weight_ Tensor
            -bias_ Tensor
        }
        class Conv2D {
            +forward(const Tensor& t) Tensor
            +to(const Device& device) void
            +load_weights(const unordered_map<std:: string, Tensor>& state_dict) void
            +name() string
            -weight_ Tensor
            -bias_ Tensor
        }
        class Conv3D {
            +forward(const Tensor& t) Tensor
            +to(const Device& device) void
            +load_weights(const unordered_map<std:: string, Tensor>& state_dict) void
            +name() string
            -weight_ Tensor
            -bias_ Tensor
        }
        class Linear {
            +forward(const Tensor& t) Tensor
            +to(const Device& device) void
            +load_weights(const unordered_map<std:: string, Tensor>& state_dict) void
            +name() string
            -weight_ Tensor
            -bias_ Tensor
        }
        class BatchNorm {
            +forward(const Tensor& t) Tensor
            +to(const Device& device) void
            +load_weights(const unordered_map<std:: string, Tensor>& state_dict) void
            +name() string
            -weight_ Tensor
            -bias_ Tensor
            -running_mean_ Tensor
            -running_var_ Tensor
        }
        class Pooling {
            +forward(const Tensor& t) Tensor
            +to(const Device& device) void
            +load_weights(const unordered_map<std:: string, Tensor>& state_dict) void
            +name() string
        }
    }

    namespace Running {
        class Sequential {
            -vector~shared_ptr~ILayer~~ order_
        }
        class GraphExecutor {
            +run() Tensor
            -vector~string~ order_
        }
        class GraphTopologicalSort {
            +sort() vector~string~$
        }
    }

    namespace HWAccelerator {
    %% CUDA 쪽은 아직 모름
        class CudaStream {
            +synchronize() void
            -stream_ cudaStream_t
        }
        class KernelConfigurator {
            +static dim3 get_grid_size(uint64_t total_elements);
            +static dim3 get_block_size();
        }
        class CudaEvent {
        }
        class DeviceContext {
            -MemoryPool* cuda_pool_
            -instance_ DeviceContext$
        }
    }

    namespace Utils {
        class StateDict {
            +find(string str) Tensor
            +append(string str, const Tensor& tensor) void
            -unordered_map~string, Tensor~ map_
        }

        class Parser {
            <<interface>>
            +parse(string filename) StateDict*
        }
        class SafeTensorParser {
            +parse(string filename) StateDict
        }
    }

    IAllocator <|-- CPUAllocator
    IAllocator <|-- CUDAAllocator
    Tensor o-- TensorImpl
    TensorImpl o-- StorageImpl
    StorageImpl *-- Storage
    ILayer <|-- Linear
    ILayer <|-- Pooling
    ILayer <|-- Conv1D
    ILayer <|-- Conv2D
    ILayer <|-- Conv3D
    ILayer <|-- BatchNorm

